--- a/src/scss/components/_react-modal.scss
+++ b/src/scss/components/_react-modal.scss
@@ -21,6 +21,7 @@
 	background-color: $modal-backdrop-bg;
 	overflow-y: auto;
 	-webkit-overflow-scrolling: touch; // Momentum scrolling for iOS
+	z-index: $z-index-modal;
 }
 
 .modal {
